--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-native": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.2"
   },
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.0"
