--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.12.1",
+    "lottie-web": "^5.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-lottie": "^1.2.3",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-router-native": "^6.4.2",
